fix `pre` rendering on mobile sized windows

--- a/src/components/StatusDashboard/styles.module.css
+++ b/src/components/StatusDashboard/styles.module.css
@@ -241,10 +241,12 @@
   overflow: auto;
   padding: 10px;
   margin: -5px 0 0 20px;
+  max-width: 100%;
 }
 
 .errored_item_content pre {
   font-size: smaller;
   margin: 0;
+  overflow: auto;
   text-wrap: wrap;
 }
